@@ -46,7 +46,6 @@ public class PurchaseBookCustomRepositoryImplTest {
 
 	@BeforeEach
 	void setUp() {
-		// Sample data setup
 		book = new Book();
 		book.setTitle("Sample Book");
 		book.setAuthor("Author");
@@ -74,7 +73,7 @@ public class PurchaseBookCustomRepositoryImplTest {
 		entityManager.persist(purchaseBook);
 		entityManager.flush(); // Ensure purchaseBook entity is persisted
 
-		totalImage = new TotalImage("http://example.com/image.jpg");
+		totalImage = new TotalImage("example.com/image.jpg");
 		entityManager.persist(totalImage);
 		entityManager.flush(); // Ensure totalImage entity is persisted
 
@@ -88,14 +87,14 @@ public class PurchaseBookCustomRepositoryImplTest {
 	void testReadBookPurchaseResponses() {
 		List<ReadPurchaseBookResponse> responses = purchaseBookCustomRepository.readBookPurchaseResponses(purchase.getId());
 		assertThat(responses).isNotEmpty();
-		assertThat(responses.get(0).readBookByPurchase().title()).isEqualTo("Sample Book");
+		assertThat(responses.getFirst().readBookByPurchase().title()).isEqualTo("Sample Book");
 	}
 
 	@Test
 	void testReadGuestBookPurchaseResponses() {
 		List<ReadPurchaseBookResponse> responses = purchaseBookCustomRepository.readGuestBookPurchaseResponses(purchase.getOrderNumber().toString());
 		assertThat(responses).isNotEmpty();
-		assertThat(responses.get(0).readBookByPurchase().title()).isEqualTo("Sample Book");
+		assertThat(responses.getFirst().readBookByPurchase().title()).isEqualTo("Sample Book");
 	}
 
 	@Test
